@@ -1,6 +1,8 @@
 ﻿Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
+### 2018-04-28
+	Added: Power down monitors when session is locked. Core.ini has two settings for this, one to control user idle timer and second for instant power down.
 ### 2018-04-25
 	Added: [Debug] section in Core.ini with secret options to enable various debug functions at launch.
 ### 2018-04-24
